Remove Windows JAR run instructions from README
Removed instructions for running the project from a JAR file on Windows.